# WebHomework_7

./: README.md  config.ini  main.py  my_select.py  pyproject.toml  seed.py
conf/: db.py  models.py  models_2.py
migrations/versions/: 804b0033515a_init.py
